--- a/blog-single.html
+++ b/blog-single.html
@@ -176,7 +176,7 @@
               <ul class="single-post-meta">
                 <li><i class="fas fa-user"></i> <a href="#">By Dadaba Foundation</a></li>
                 <li><i class="fas fa-calendar"></i> <a href="#">September 9, 2025</a></li>
-                <li><i class="fas fa-comments"></i> <a href="#">2 Comments</a></li>
+                <li><i class="fas fa-comments"></i> <a href="#">3 Comments</a></li>
               </ul>
 
               <p>Thanks to the generosity of our supporters and the leadership of district assemblies, Dadaba Foundation has commissioned three new boreholes across Ahafo communities. Each site includes hygiene promotion, water-user committees, and a simple fee model to fund maintenance. With safe water within 500 meters, families—especially girls—spend less time fetching water and more time in school.</p>
@@ -223,23 +223,24 @@
                 </div>
               </div><!-- /.post-navigation -->
 
-              <!-- Comments -->
+              <!-- Comments (Ghanaian names, varied dates, local context) -->
               <div class="comments-area">
                 <div class="comments-section">
                   <h3 class="comments-title">Post Comments</h3>
                   <ol class="comments">
+                    <!-- Top-level comment -->
                     <li class="comment even thread-even depth-1" id="comment-1">
                       <div id="div-comment-1">
                         <div class="comment-thumb">
-                          <div class="comment-img"><img src="assets/img/author-2.jpg" alt="Reader avatar"></div>
+                          <div class="comment-img"><img src="assets/img/author-2.jpg" alt="Kwame Mensah"></div>
                         </div>
                         <div class="comment-main-area">
                           <div class="comment-wrapper">
                             <div class="comments-meta">
-                              <h4>Jhon Castellon <span class="comments-date">Sep 09 2025</span></h4>
+                              <h4>Kwame Mensah <span class="comments-date">Aug 28 2025</span></h4>
                             </div>
                             <div class="comment-area">
-                              <p>Great work team! The hygiene sessions made a big difference in our community.</p>
+                              <p>Mo ayɛ ade! The hygiene durbar at the chief’s palace helped a lot. Our JHS pupils now use the veronica buckets and soap you provided.</p>
                               <div class="comments-reply">
                                 <a class="comment-reply-link" href="#"><span>Reply</span></a>
                               </div>
@@ -248,19 +249,20 @@
                         </div>
                       </div>
 
+                      <!-- Replies -->
                       <ul class="children">
                         <li class="comment">
                           <div>
                             <div class="comment-thumb">
-                              <div class="comment-img"><img src="assets/img/author-3.jpg" alt="Reader avatar"></div>
+                              <div class="comment-img"><img src="assets/img/author-3.jpg" alt="Kojo Owusu"></div>
                             </div>
                             <div class="comment-main-area">
                               <div class="comment-wrapper">
                                 <div class="comments-meta">
-                                  <h4>José Carpio <span class="comments-date">Sep 09 2025</span></h4>
+                                  <h4>Kojo Owusu <span class="comments-date">Sep 02 2025</span></h4>
                                 </div>
                                 <div class="comment-area">
-                                  <p>Is there a way to support with spare parts for pumps? Happy to help.</p>
+                                  <p>Can we contribute through Mobile Money for spare parts? The pump caretaker said it will help when a seal spoils during dry season.</p>
                                   <div class="comments-reply">
                                     <a class="comment-reply-link" href="#"><span>Reply</span></a>
                                   </div>
@@ -273,15 +275,15 @@
                             <li class="comment">
                               <div>
                                 <div class="comment-thumb">
-                                  <div class="comment-img"><img src="assets/img/author-1.jpg" alt="Reader avatar"></div>
+                                  <div class="comment-img"><img src="assets/img/author-1.jpg" alt="Yaa Asante"></div>
                                 </div>
                                 <div class="comment-main-area">
                                   <div class="comment-wrapper">
                                     <div class="comments-meta">
-                                      <h4>Valentin Lacoste <span class="comments-date">Sep 09 2025</span></h4>
+                                      <h4>Yaa Asante <span class="comments-date">Sep 07 2025</span></h4>
                                     </div>
                                     <div class="comment-area">
-                                      <p>Amazing to see uptime being tracked. Sustainability matters!</p>
+                                      <p>Yes please. The water-user committee can share the MoMo number at church and at the information center so everyone contributes small.</p>
                                       <div class="comments-reply">
                                         <a class="comment-reply-link" href="#"><span>Reply</span></a>
                                       </div>
@@ -295,18 +297,19 @@
                       </ul>
                     </li>
 
+                    <!-- Second top-level comment -->
                     <li class="comment">
                       <div>
                         <div class="comment-thumb">
-                          <div class="comment-img"><img src="assets/img/author-4.jpg" alt="Reader avatar"></div>
+                          <div class="comment-img"><img src="assets/img/author-4.jpg" alt="King George"></div>
                         </div>
                         <div class="comment-main-area">
                           <div class="comment-wrapper">
                             <div class="comments-meta">
-                              <h4>Kyle Frederick <span class="comments-date">Sep 09 2025</span></h4>
+                              <h4>King George<span class="comments-date">Sep 14 2025</span></h4>
                             </div>
                             <div class="comment-area">
-                              <p>Would love an update on the school hygiene clubs when they launch.</p>
+                              <p>Great initiative. Kindly share when the school hygiene clubs start so our SHS mentors can support at the CHPS compound outreach.</p>
                               <div class="comments-reply">
                                 <a class="comment-reply-link" href="#"><span>Reply</span></a>
                               </div>
